@@ -9,6 +9,9 @@ xx/xx/2005 - 1.12.2-WIP
 	- Fix bogus le16_to_cpu() which shouldbe le32_to_cpu() when accessing
 	  the attribute list entry attribute type in some places in
 	  libntfs/attrib.c.  (Anton)
+	- Fix silly bug introduced in 1.12.0 which breaks ntfsfix (and others
+	  possibly) when calling ntfs_attr_lookup() with AT_UNNAMED name and
+	  no ntfs inode in the search context.  (Anton)
 
 10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.
 
